--- a/Resources/Assignment5 2/starter_code/index.html
+++ b/Resources/Assignment5 2/starter_code/index.html
@@ -3,24 +3,20 @@
 	<head>
     	<meta charset="utf-8">
     	<meta name="description" content="The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.">
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-
 
 		<title>Relaxr Landing Page</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
 
-		<!-- external links -->
+		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
-    
 	<body>
 		<header>
 			<div class="container">
 				<h1 class="logo">Relaxr</h1>
 				<nav>
-                    <div class="hamburger"> &#9776;</div>
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="#">About</a></li>
@@ -67,10 +63,5 @@
 
 			<p class="copyright">Copyright 2015. Relaxr.</p>
 		</footer>
-        
-        <!-- JQUERY Start-->
-
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="js/relaxr.js"></script>        
 	</body>
 </html>
